# KafkaFoodPipeline

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile.consumer  Dockerfile.producer  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: build.yml  claude.yml
docs/KeyPoints/: README.md  horizontal-scaling.md  infrastructure.md
docs/features/kafka-food-pipeline-PLANNED/: prd.md  status.md  tasks.md
scripts/: init-kafka-topics.sh
src/consumer/: __init__.py  config.py  consumer.py  database.py  main.py  models.py
src/database/: init.sql
src/database/migrations/: 001_create_orders_table.sql
src/producer/: __init__.py  config.py  main.py  mock_data.py  producer.py
src/shared/: __init__.py  logger.py
tests/: conftest.py
tests/integration/: test_consumer_integration.py  test_pipeline_e2e.py  test_producer_integration.py
tests/unit/: test_config.py  test_mock_data.py  test_models.py
